test/fail/issue-3585c.mo
import F = "issue-3585/Field";

actor {
}
